@@ -86,6 +86,10 @@ func TestDataDBReload(t *testing.T) {
 			utils.RedisClusterSyncCfg:        "5s",
 			utils.RedisClusterCfg:            false,
 			utils.RedisSentinelNameCfg:       "",
+			utils.RedisTLS:                   false,
+			utils.RedisClientCertificate:     "",
+			utils.RedisClientKey:             "",
+			utils.RedisCACertificate:         "",
 		},
 		RmtConns: []string{},
 		RplConns: []string{},
